[BlackBerry] Fix crash on PagePopupChromeClient https://bugs.webkit.org/show_bug.cgi?id=88675

Patch by Crystal Zhang <haizhang@rim.com> on 2012-06-08
Reviewed by Antonio Gomes.

PR 163672.

Actually it's the bug inside InputHandler, should delete the old popup and create a new one,
because update() is problematic. Also no need to save pointer in InputHandler.

* WebCoreSupport/ChromeClientBlackBerry.cpp:
(WebCore::ChromeClientBlackBerry::openPagePopup):
(WebCore::ChromeClientBlackBerry::closePagePopup):
* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::InputHandler):
(BlackBerry::WebKit::InputHandler::~InputHandler):
(BlackBerry::WebKit::InputHandler::openSelectPopup):
* WebKitSupport/InputHandler.h:
(WebCore):
(InputHandler):

Canonical link: https://commits.webkit.org/106516@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119880 268f45cc-cd09-0410-ab3c-d52691b4dbfc